--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,19 @@ body {
   background-color: #20202D;
 }
 
-p, h1 {
+p, h1, h2, h3, h4 {
   margin: 0;
 }
 
-button {
+a, button {
   border: none;
   outline: none;
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 @font-face {
@@ -39,6 +44,12 @@ button {
 .container {
   margin: 0 auto;
   max-width: 945px;
+}
+
+.section-title {
+  margin-bottom: 84px;
+  font-weight: 700;
+  font-size: 36px;
 }
 
 .flex {
@@ -67,7 +78,7 @@ button {
 
 .hero-subtitle {
   margin-bottom: 14px;
-  display: inline-block;
+  display: block;
   font-size: 24px;
   color: #ffbb01;
 }
@@ -97,7 +108,7 @@ button {
   background: linear-gradient(180deg, #fdde76 0%, #ffbb01 100%);
 }
 
-.hero-avator {
+.hero-avatar {
   width: 389px;
   height: 389px;
   border-radius: 50%;
@@ -106,4 +117,132 @@ button {
   background-position: center top -10px;
   background-image: url('../image/avatar.jpg');
   background-color: #ffffff;
+}
+
+.features {
+  padding: 64px 0 92px 0;
+}
+
+.features-block {
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 64px;
+}
+
+.features-item {
+  flex-basis: 30%;
+}
+
+.features-img {
+  margin-bottom: 22px;
+}
+
+.features-title {
+  margin-bottom: 16px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 117%;
+}
+
+.features-text {
+  font-size: 16px;
+  line-height: 175%;
+}
+
+.contacts-block {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contacts-from {
+  padding: 40px 36px 49px 35px;
+  max-width: 380px;
+  border-radius: 5px;
+  box-shadow: -5px 5px 0 0 #ffc41d;
+  background-color: #ffffff;
+}
+
+.footer {
+  padding: 57px 0 148px 0;
+}
+
+.form-title {
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 156%;
+  text-align: center;
+  color: #000000;
+}
+
+.input {
+  padding: 23px 23px 23px 49px;
+  width: 100%;
+  font-size: 14px;
+  line-height: 200%;
+  border: none;
+  border-radius: 5px;
+  box-shadow: inset 0 3px 10px 0 rgba(199, 199, 199, 0.25);
+  background-position: left 20px center ;
+  background-repeat: no-repeat;
+  background-color: #f8f8f8;
+  color: #949494;
+}
+
+.input-name {
+  margin-bottom: 17px;
+  background-image: url('../image/form/user.svg');
+}
+
+.input-phone {
+  margin-bottom: 26px;
+  background-image: url('../image/form/phone.svg');
+}
+
+.form-button {
+  width: 100%;
+}
+
+.contacts-text {
+  flex-basis: 50%;
+}
+
+.contacts-data {
+  margin-bottom: 42px;
+  flex-wrap: wrap;
+}
+
+.contacts-phone,
+.contacts-mail {
+  margin-bottom: 53px;
+  flex-basis: 50%;
+}
+
+.contacts-social {
+  flex-basis: 100%;
+}
+
+.contacts-title {
+  margin-bottom: 15px;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.contacts-link {
+  font-size: 16px;
+}
+
+.contacts-social .contacts-link {
+  margin-right: 37px;
+}
+
+.contacts-text .social-links {
+  margin-bottom: 73px;
+}
+
+.contacts-policy {
+  font-size: 15px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #a5a5a5;
 }
