--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@ p, h1, h2, h3, h4 {
   margin: 0;
 }
 
-a, button {
+a, 
+button,
+input {
   border: none;
   outline: none;
   cursor: pointer;
@@ -23,6 +25,10 @@ a, button {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+img {
+  max-width: 100%;
 }
 
 @font-face {
@@ -43,6 +49,7 @@ a {
 
 .container {
   margin: 0 auto;
+  width: 90%;
   max-width: 945px;
 }
 
@@ -69,6 +76,19 @@ a {
 
 .social-links {
   gap: 20px;
+}
+
+.social-link {
+  transition: all 0.3s ease-in-out;
+}
+
+.social-link:focus {
+  outline-offset: 5px;
+  outline: 2px solid #ffc41d;
+}
+
+.social-link:hover {
+  transform: rotate(0.25turn);
 }
 
 .hero-content {
@@ -106,6 +126,16 @@ a {
   box-shadow: 0 4px 0 0 #b68500;
   color: #2e2e30;
   background: linear-gradient(180deg, #fdde76 0%, #ffbb01 100%);
+  transition: all 0.3s ease-in-out;
+}
+
+.button:focus-visible {
+  background: none;
+  background-color: #ffd86c;
+}
+
+.button:hover {
+  color: #ffffff;
 }
 
 .hero-avatar {
@@ -161,6 +191,11 @@ a {
 .project-slide {
   justify-content: space-between;
   align-items: flex-start;
+  cursor: pointer;
+}
+
+.project-img {
+  border-radius: 6px;
 }
 
 .project-text {
@@ -232,7 +267,7 @@ a {
   align-items: center;
 }
 
-.contacts-from {
+.contacts-form {
   padding: 40px 36px 49px 35px;
   max-width: 380px;
   border-radius: 5px;
@@ -258,13 +293,22 @@ a {
   width: 100%;
   font-size: 14px;
   line-height: 200%;
-  border: none;
   border-radius: 5px;
   box-shadow: inset 0 3px 10px 0 rgba(199, 199, 199, 0.25);
   background-position: left 20px center ;
   background-repeat: no-repeat;
   background-color: #f8f8f8;
   color: #949494;
+  transition: all 0.3s ease-in-out;
+}
+
+.input:focus {
+  outline: 2px solid #ffc41d;
+}
+
+.input:hover {
+  outline: none;
+  background-color: #ffd86c;
 }
 
 .input-name {
@@ -308,6 +352,16 @@ a {
 
 .contacts-link {
   font-size: 16px;
+  transition: all 0.3s ease-in-out;
+}
+
+.contacts-link:focus {
+  outline-offset: 5px;
+  outline: 2px solid #ffc41d;
+}
+
+.contacts-link:hover {
+  color: #ffc41d;
 }
 
 .contacts-social .contacts-link:not(:last-child) {
@@ -324,4 +378,186 @@ a {
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #a5a5a5;
+  transition: all 0.3s ease-in-out;
+}
+
+.contacts-policy:focus {
+  outline-offset: 5px;
+  outline: 2px solid #ffc41d;
+}
+
+.contacts-policy:hover {
+  color: #ffc41d;
+}
+
+@media (max-width: 1100px) {
+  .hero-avatar {
+    width: 300px;
+    height: 300px;
+    border-width: 10px;
+  }
+}
+
+@media (max-width: 950px) {
+  .project-slide {
+      display: flex;
+      flex-direction: column;
+      row-gap: 46px;
+  }
+
+  .project-img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 836px) {
+  .hero-content {
+    flex-direction: column-reverse;
+    justify-content: center;
+    row-gap: 17px;
+  }
+
+  .hero-text {
+    text-align: center;
+  }
+
+  .features-item {
+    flex-basis: 45%;
+  }
+
+  .contacts-block {
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 58px;
+  }
+
+  .contacts-data {
+    flex-direction: column;
+    row-gap: 35px;
+    max-width: 227px;
+  }
+
+  @media(max-width: 564px) {
+    .hero {
+      padding-bottom: 75px;
+    }
+
+    .hero-header {
+      margin-bottom: 39px;
+    }
+
+    .social-links {
+      gap: 10px;
+    }
+    
+    .hero-avatar {
+      width: 113px;
+      height: 113px;
+      border-width: 4px;
+      background-size: 113px 113px;
+    }
+
+    .hero-subtitle {
+      margin-bottom: 4px;
+      font-size: 16px;
+      line-height: 169%;
+    }
+
+    .hero-title {
+      margin-bottom: 15px;
+      font-size: 24px;
+    }
+
+    .hero-description {
+      margin-bottom: 34px;
+      font-size: 14px;
+      line-height: 140%;
+    }
+
+    .button {
+      padding: 14px 25px;
+      font-size: 10px;
+    }
+
+    .features {
+      padding: 63px 0 60px 0;
+    }
+
+    .section-title {
+      margin-bottom: 49px;
+      font-size: 19px;
+    }
+
+    .features-block {
+      row-gap: 30px;
+    }
+
+    .features-item {
+      flex-basis: 100%;
+    }
+
+    .features-title {
+      margin-bottom: 6px;
+      font-size: 18px;
+      line-height: 156%;
+    }
+
+    .features-text {
+      font-size: 14px;
+      line-height: 200%;
+    }
+
+    .project-time,
+    .project-cost {
+      margin-bottom: 33px;
+      flex-basis: 100%;
+    }
+
+    .project-title {
+      margin-bottom: 40px;
+      font-size: 18px;
+      line-height: 150%;
+    }
+
+    .project-paragraph {
+      font-size: 14px;
+    }
+
+    .contacts-form {
+      padding: 39px 19px 47px 14px;
+    }
+
+    .form-title {
+      margin-bottom: 27px;
+      font-size: 15px;
+      line-height: 140%;
+    }
+
+    .contacts-data {
+      margin-bottom: 39px;
+    }
+
+    .contacts-phone,
+    .contacts-mail {
+      margin-bottom: 0;
+      flex-basis: 100%;
+    }
+
+    .contacts-title {
+      margin-bottom: 12px;
+      font-size: 18px;
+    }
+
+    .contacts-link {
+      font-size: 14px;
+    }
+
+    .contacts-text .social-links {
+      margin-bottom: 27px;
+    }
+
+    .footer {
+      padding-bottom: 50px;
+    }
+  }
 }
